humandb-services/aws/hdb01-efs.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: efs-provisioner-hdb01
  namespace: humandb-01
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: efs-provisioner-hdb01
    spec:
      serviceAccount: hdb01-efs-provisoner
      containers:
        - name: efs-provisioner-hdb01
          image: quay.io/external_storage/efs-provisioner:latest
          volumeMounts:
            - name: pv-volume
              mountPath: /persistentvolumes
      volumes:
        - name: pv-volume
          nfs:
            server: fs-6902bf23.efs.us-east-1.amazonaws.com
            path: /
