humandb-services/aws/humandb-infra-efs.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: efs-provisioner
  namespace: humandb-01
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: efs-provisioner
    spec:
      serviceAccount: hdb01-efs-provisoner
      containers:
        - name: efs-provisioner
          image: quay.io/external_storage/efs-provisioner:latest
          volumeMounts:
            - name: pv-volume
              mountPath: /persistentvolumes
      volumes:
        - name: pv-volume
          nfs:
            server: fs-6248fe28.efs.us-east-1.amazonaws.com
            path: /
